# domain/session/postgres/session.go
@@ -40,7 +40,7 @@ func (r *Repository) CreateRefreshToken(ctx context.Context, refreshToken *domse
 func (r *Repository) createRefreshToken(dctx sql.DataContext, refreshToken *domsession.RefreshToken) error {
 	return sql.ExecOne(dctx, query.CreateRefreshToken, pgx.NamedArgs{
 		"id":         refreshToken.ID,
-		"user_id":    refreshToken.AuthorID,
+		"author_id":  refreshToken.AuthorID,
 		"expires_at": refreshToken.ExpiresAt,
 		"created_at": refreshToken.CreatedAt,
 	})
@@ -89,7 +89,7 @@ func (r *Repository) DeleteRefreshToken(ctx context.Context, refreshTokenID id.R
 func (r *Repository) DeleteRefreshTokensByAuthorID(ctx context.Context, authorID id.Author) error {
 	return sql.WithConnection(ctx, r.dataSource, func(dctx sql.DataContext) error {
 		return sql.Exec(dctx, query.DeleteRefreshTokensByAuthorID, pgx.NamedArgs{
-			"user_id": authorID,
+			"author_id": authorID,
 		})
 	})
 }
